@startuml
title Portfolio – Projets

!include _base-class.wsd

hide empty members
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0

package "Projets Portfolio" as Projets {

  class ProjetPortfolio {
    + titre: String
    + slug: String
    + description: String
    + courteDescription: String
    + urlDemo: String
    + urlSource: String
    + technologies: List
    + dateRealisation: Date
    + estEnVedette: Boolean
    + estPublie: Boolean
  }

ProjetPortfolio --|> SoftDeletes

  class Media {
    + type: TypeMedia
    + cheminFichier: String
    + urlExterne: String
    + vignette: String
    + titre: String
    + taille: Integer
    + largeur: Integer
    + hauteur: Integer
    + estPrincipal: Boolean
    + ordre: Integer
  }

Media --|> Timestamps
}

' ==================================================
' ENUM RELATIONS
' ==================================================
Media --> TypeMedia

' ==================================================
' RELATIONS
' ==================================================
Proprietaire "1" -- "0..*" ProjetPortfolio : projets
ProjetPortfolio "1" -- "0..*" Media : medias

legend bottom
  |= Notation |= Signification |
  | "1" -- "0..*" | Un à plusieurs |
  | --|>  | Héritage |
end legend

@enduml